--- a/userWeb/src/main/resources/application.properties
+++ b/userWeb/src/main/resources/application.properties
@@ -7,4 +7,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:com/example/mapper/*.xml
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-# logging.level.com.example.mapper=DEBUG ????????????????
+logging.level.com.example.mapper=DEBUG ????????????????
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=105MB
+#m????
+spring.http.multipart.enabled=true
