--- a/administratorWeb/src/main/resources/application.properties
+++ b/administratorWeb/src/main/resources/application.properties
@@ -4,25 +4,61 @@ spring.datasource.url=jdbc:mysql://localhost:3306/myDb?serverTimezone=GMT%2B8&us
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.initialSize=5
-spring.datasource.minIdle=5
-spring.datasource.maxActive=20
-spring.datasource.maxWait=60000
-spring.datasource.timeBetweenEvictionRunsMillis=60000
-spring.datasource.minEvictableIdleTimeMillis=300000
-spring.datasource.validationQuery=SELECT 1
-spring.datasource.testWhileIdle=true
-spring.datasource.testOnBorrow=false
-spring.datasource.testOnReturn=false
-spring.datasource.poolPreparedStatements=true
-spring.datasource.filters=stat,wall,slf4j
-spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
-spring.datasource.useGlobalDataSourceStat=true
-spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-mybatis.mapper-locations=classpath:com/example/mapper/*.xml4
+mybatis.mapper-locations=classpath:com/example/mapper/**.xml
+logging.level.com.example.mapper=debug
+spring.jpa.show-sql=true
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=105MB
+#m????
+spring.http.multipart.enabled=true
+server.error.path=/error
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#??????????????
+spring.datasource.druid.initial-size=5
+#???????
+spring.datasource.druid.max-active=20
+#???????
+spring.datasource.druid.min-idle=5
+#????????????????
+spring.datasource.druid.max-wait=3000
+#????preparedStatement????PSCache,PSCache???????????????????oracle,?mysql??????
+spring.datasource.druid.pool-prepared-statements=false
+#???PSCache???????0????0??poolPreparedStatements???????true??Druid??????Oracle?PSCache??????????????????????????100
+spring.datasource.druid.max-open-prepared-statements=-1
+#?????????????????
+spring.datasource.druid.time-between-eviction-runs-millis=60000
+# ??????????????
+spring.datasource.druid.min-evictable-idle-time-millis=300000
+spring.datasource.druid.max-evictable-idle-time-millis=4000000
+#?????stat,???sql???wall
+spring.datasource.druid.filters=stat,wall
+#Spring??AOP?????x.y.z.service.*,??????????
+spring.datasource.druid.aop-patterns=com.example.*
+#????StatFilter???true
+spring.datasource.druid.web-stat-filter.enabled=true
+#??????
+spring.datasource.druid.web-stat-filter.url-pattern=/*
+#???????
+spring.datasource.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*
+#????StatViewServlet???true
+spring.datasource.druid.stat-view-servlet.enabled=true
+#?????/druid?????StatViewServlet
+spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
+# ????????
+spring.datasource.druid.stat-view-servlet.reset-enable=false
+# ?????????????????root
+spring.datasource.druid.stat-view-servlet.login-username=druid
+spring.datasource.druid.stat-view-servlet.login-password=druid
+#IP???
+spring.datasource.druid.stat-view-servlet.allow=127.0.0.1
+#&emsp;IP??????????deny???allow????????????
+spring.datasource.druid.stat-view-servlet.deny=129.5.5.5 
+#?????, ??????
+#?????????????????
+file.upload.directory=D:\\ruanjian
+file.upload.disableTypes=dll,exe
 #???????
 #wxpay.appid=wx0c341ac12e3a8ce1
 #wxpay.mchid=1439182322
