--- a/administratorWeb/src/main/resources/application.properties
+++ b/administratorWeb/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 server.port=8081
+signkey=sign
 spring.application.name=audit
-spring.datasource.url=jdbc:mysql://localhost:3306/myDb?serverTimezone=GMT%2B8&useAffectedRows=true&allowMultiQueries=true
-spring.datasource.username=root
-spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
@@ -13,48 +11,6 @@ spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=105MB
 #m????
 spring.http.multipart.enabled=true
-server.error.path=/error
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-#??????????????
-spring.datasource.druid.initial-size=5
-#???????
-spring.datasource.druid.max-active=20
-#???????
-spring.datasource.druid.min-idle=5
-#????????????????
-spring.datasource.druid.max-wait=3000
-#????preparedStatement????PSCache,PSCache???????????????????oracle,?mysql??????
-spring.datasource.druid.pool-prepared-statements=false
-#???PSCache???????0????0??poolPreparedStatements???????true??Druid??????Oracle?PSCache??????????????????????????100
-spring.datasource.druid.max-open-prepared-statements=-1
-#?????????????????
-spring.datasource.druid.time-between-eviction-runs-millis=60000
-# ??????????????
-spring.datasource.druid.min-evictable-idle-time-millis=300000
-spring.datasource.druid.max-evictable-idle-time-millis=4000000
-#?????stat,???sql???wall
-spring.datasource.druid.filters=stat,wall
-#Spring??AOP?????x.y.z.service.*,??????????
-spring.datasource.druid.aop-patterns=com.example.*
-#????StatFilter???true
-spring.datasource.druid.web-stat-filter.enabled=true
-#??????
-spring.datasource.druid.web-stat-filter.url-pattern=/*
-#???????
-spring.datasource.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*
-#????StatViewServlet???true
-spring.datasource.druid.stat-view-servlet.enabled=true
-#?????/druid?????StatViewServlet
-spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
-# ????????
-spring.datasource.druid.stat-view-servlet.reset-enable=false
-# ?????????????????root
-spring.datasource.druid.stat-view-servlet.login-username=druid
-spring.datasource.druid.stat-view-servlet.login-password=druid
-#IP???
-spring.datasource.druid.stat-view-servlet.allow=127.0.0.1
-#&emsp;IP??????????deny???allow????????????
-spring.datasource.druid.stat-view-servlet.deny=129.5.5.5 
 #?????, ??????
 #?????????????????
 file.upload.directory=D:\\ruanjian
@@ -64,6 +20,7 @@ file.upload.disableTypes=dll,exe
 #wxpay.mchid=1439182322
 #wxpay.key=192006250b4c09247ec02edce69f6a2d
 #wxpay.notify_url=http://api.woliegequ.com/api/payment/wxpay/notify
+spring.profiles.include=dev,druid
 
 
 
