--- a/module/pom.xml
+++ b/module/pom.xml
@@ -64,6 +64,15 @@
             <artifactId>jedis</artifactId>
             <version>2.7.1</version><!--版本号可根据实际情况填写-->
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.9</version>
+        </dependency>
 
 
     </dependencies>
