--- a/userWeb/src/main/resources/application.properties
+++ b/userWeb/src/main/resources/application.properties
@@ -1,14 +1,1 @@
-server.port=8082
-spring.application.name=audit
-spring.datasource.url=jdbc:mysql://localhost:3306/myDb?serverTimezone=GMT%2B8&useAffectedRows=true&allowMultiQueries=true
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-mybatis.configuration.map-underscore-to-camel-case=true
-mybatis.mapper-locations=classpath:com/example/mapper/*.xml
-mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-logging.level.com.example.mapper=DEBUG ????????????????
-spring.servlet.multipart.max-file-size=100MB
-spring.servlet.multipart.max-request-size=105MB
-#m????
-spring.http.multipart.enabled=true
+spring.profiles.include=dev,druid
